--- a/Footer/public/index.html
+++ b/Footer/public/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="footer"></div>
+  <script src="../public//bundle.js"></script>
 </body>
 </html>
