--- a/Footer/public/index.html
+++ b/Footer/public/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 <body>
   <div id="footer"></div>
@@ -15,4 +16,4 @@
 </body>
 </html>
 
-<!-- REMEMBER TO PUT GOOGLE LINK AND FONTAWESOME-->
+<!-- REMEMBER TO PUT GOOGLE LINK && FONTAWESOME && BOOTSTRAP-->
